# purec

./: .gitignore  Cargo.toml  Makefile  README.md
asm/: main.asm
docs/: links.md  typing.md
example/: main.asm
js/: main.js  std.js
pure/: main.asm  main.pure  unknown_references.pure
src/: asm.rs  ast.rs  def.rs  final_grammar.pest  grammar.pest  infer.rs  js.rs  main.rs  parser.rs  stdlib.rs  types.rs  valid.rs
