[package]
name = "purec"
version = "0.1.0"
edition = "2021"
authors = ["Viktor A. Rozenko Voitenko <sharp.vik@gmail.com>"]
description = "Pure Compiler"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/prog-lang/purec#readme"
homepage = "https://github.com/prog-lang/purec#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
pest = "2.7.7"
pest_derive = "2.7.7"
